# advent-of-code-2021-python

./: LICENSE  README.md  pyproject.toml
day01/: count_depth_increases.py  day01.ipynb
day02/: day02.py
day03/: day03.py
day04/: day04.py
day05/: day05.py
day06/: day06.py
day07/: day07.py
day08/: day08.py
day09/: day09.py
day10/: day10.py
day11/: day11.py
day12/: day12.py
day13/: day13.py
day14/: day14.py
