[tool.poetry]
name = "advent-of-code-2021-python"
version = "0.1.0"
description = "Code puzzles from https://adventofcode.com for Dec 2021"
authors = ["srini4000 <srini4000@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.6.0"
pytest = ">=9.0.3"
black = ">=26.3.1"
tornado = ">=6.5.5"
pygments = ">=2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
